src/objects/JBCXM__DashboardComponent__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__Categories__c</fullName>
        <label>Categories</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__DataSeries__c</fullName>
        <label>DataSeries</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__DrillDownColumnList__c</fullName>
        <description>This is used to store the list of columns to show on drill down.</description>
        <label>Drill Down Column List</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__FilterConditions__c</fullName>
        <label>FilterConditions</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__ReportParams__c</fullName>
        <label>ReportParams</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Type__c</fullName>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>DashboardComponent</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DashboardComponent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DashboardComponents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>